# barrett_multiplication

./: CMakeLists.txt  Makefile  README.md  doxygen_format.txt
.github/workflows/: rust-clippy.yml
barrett_multiplication/: CMakeLists.txt  doxygen_format.txt
barrett_multiplication/examples/: double_integer.cpp  hello_world.cpp  unsigned_integer_concept.cpp
barrett_multiplication/src/include/: hello_world.h  unsigned_integer_concept.h
barrett_multiplication/src/lib/: barrett_class.cpp  hello_world.cpp  unsigned_integer.cpp
barrett_multiplication/src/tests/: add_double_u8.cpp  mod_mul_u8.cpp  mod_red_d_u8.cpp  mod_red_u8.cpp  mul_u8.cpp  right_shift_lsb_u8.cpp
examples/: hello_world.cpp  little_fermat.cpp  unsigned_integer_concept.cpp
src/include/: barrett_class.h  barrett_mul.h  double_integer.h  hello_world.h  shoup_mul.h  unsigned_integer_concept.h
src/lib/: barrett_class.cpp  double_integer.cpp  shoup_mul.cpp
src/tests/: add_double_u8.cpp  div_by_u_u8.cpp  left_shift_u8.cpp  log_2_u16.cpp  mod_red_d_u8.cpp  mod_red_u8.cpp  mul_u8.cpp  right_shift_lsb_u8.cpp  right_shift_u8.cpp  shoup_mul_u8.cpp  small_test_pow_u8.cpp  sub_double_u8.cpp  sub_lsb_double_u8.cpp
